# fastapi-vue

./: .gitignore
services/backend/: Dockerfile  pyproject.toml
services/backend/src/backend/: config.py  main.py
services/frontend/: package-lock.json  package.json
